# qd_language

./: CMakeLists.txt  README.md  log.txt  qd_main.cpp
include/: qd_assign.h  qd_baselib.h  qd_binary.h  qd_bitset.h  qd_buffer.h  qd_call.h  qd_env.h  qd_err.h  qd_func.h  qd_funclib.h  qd_header.h  qd_instruction.h  qd_io.h  qd_iolib.h  qd_lex.h  qd_lib.h  qd_log.h  qd_main.h  qd_mathlib.h  qd_obj.h  qd_parser.h  qd_state.h  qd_strlib.h  qd_varlib.h  qd_version.h  qd_vm.h
lib/: base.qd  math.qd
src/: main.cpp  qd_assign.cpp  qd_baselib.cpp  qd_bitset.cpp  qd_buffer.cpp  qd_call.cpp  qd_env.cpp  qd_func.cpp  qd_funclib.cpp  qd_instruction.cpp  qd_io.cpp  qd_iolib.cpp  qd_lex.cpp  qd_lib.cpp  qd_log.cpp  qd_main.cpp  qd_mathlib.cpp  qd_obj.cpp  qd_parser.cpp  qd_state.cpp  qd_strlib.cpp  qd_varlib.cpp  qd_vm.cpp
test/: 1  2  for_test  func_test  if_test  iolib_test  test  union_test  while_test
test/algorithm_test/: fibonacci_test  hanoi_test
test/lib_test/: hanoi_test  iolib_test  mathlib_test  strlib_test  tmp  wc_test  ziju_test
test/simple_test/: array_test  expr_test  fibonacci_test  for_test  func_test  union_test
tutorials/: base.md  math.md  statement.md  string.md  variables.md
